# wencheng

./: .env.sample  README.md  README.zh.md  pyproject.toml  run.sh
backend/: chat_history.py  main.py
notes/: rag.ipynb
ui/: package.json
ui/api/: agents.js  chat_history.js  remote_agents.js  robot.js
ui/components/: Layout.js  Layout.module.css
ui/components/AgentSelector/: Index.jsx  Index.module.css
ui/components/ChatRobot/: ChatHistory.jsx  ChatHistory.module.css  ChatMessage.jsx  ChatMessage.module.css  ChatMessageSender.jsx  ChatMessageSender.module.css  Index.jsx  Index.module.css
ui/components/Editor/: BlockVarText.jsx  DraftEditor.jsx  DraftEditor.module.css  Index.jsx  Index.module.css  TableOfContents.jsx  TableOfContents.module.css  Toolbar.jsx  VarEditor.jsx  VarEditor.module.css  VarText.js
ui/components/NoteEditor/: BlockVarText.jsx  Index.jsx  Index.module.css  TableOfContents.jsx  Toolbar.jsx
ui/components/Project/: Index.jsx  Index.module.css
ui/pages/: Writing.module.css  chat.js  chat2.js  index.js  index.module.css  ingest.js  train.js  writing.js
ui/pages/api/: chat_api.js
ui/styles/: Layout.module.css
