[tool.poetry]
name = "wencheng"
version = "0.1.0"
description = "An agent base on GPT to create documents for you"
authors = ["arcstep <43801@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.10,<3.12"
fastapi = "^0.109.0"
langserve = "^0.0.46"
langchain-openai = "^0.0.6"
python-dotenv = "^1.0.0"
uvicorn = "^0.27.0.post1"
langchain-zhipu = "4.1.5"
langchain = ">=0.1.20,<0.3.0"
faiss-cpu = "^1.8.0"
textlong = "0.4.9"
pandas = "^2.2.2"
torch = "^1.10.0"
openpyxl = "^3.1.2"
pydantic = "1.10.13"
sse-starlette = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
